--- a/okh.yml
+++ b/okh.yml
@@ -1,1 +1,3 @@
+# This file is to be an Open Know-How manifest in compliance with the Open Know-How Specification. (2022). Internet of Production Alliance. Retrieved from https://standards.internetofproduction.org/pub/okh
+# Visit https://okh.makernet.org/form to generate the OKH manifest. 
 
